<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:background="@color/materialGray200">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="225dp"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/salads" />


        <TextView
            android:id="@+id/price"
            style="@style/PriceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/info"
            tools:text="$200" />


        <ImageView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="16dp"
            android:tint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:srcCompat="@drawable/ic_info" />

        <TextView
            android:id="@+id/title"
            style="@style/NameTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/weight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price"
            tools:text="Meal Title" />


        <EditText
            android:id="@+id/content"
            style="@style/ContentTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@null"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textMultiLine|textPersonName|textImeMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/btnAdd"
            app:layout_constraintEnd_toStartOf="@id/weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="@string/content_placeholder" />

        <TextView
            android:id="@+id/weight"
            style="@style/PriceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btnAdd"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="$200" />


        <View
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/addToCart"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/btnAdd"
            app:layout_constraintEnd_toEndOf="@id/btnAdd"
            app:layout_constraintStart_toStartOf="@id/btnAdd"
            app:layout_constraintTop_toTopOf="@id/btnAdd"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btnAdd"
            app:layout_constraintStart_toStartOf="@id/btnAdd"
            app:layout_constraintTop_toTopOf="@id/btnAdd"
            app:srcCompat="@drawable/ic_minus" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="#CCF8F4F4"
            android:textSize="22sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/btnAdd"
            app:layout_constraintEnd_toEndOf="@id/btnAdd"
            app:layout_constraintStart_toStartOf="@id/btnAdd"
            app:layout_constraintTop_toTopOf="@id/btnAdd"
            tools:text="1" />

        <ImageView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btnAdd"
            app:layout_constraintEnd_toEndOf="@id/btnAdd"
            app:layout_constraintTop_toTopOf="@id/btnAdd"
            app:srcCompat="@drawable/ic_plus" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/infoLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/info_layout"
            android:elevation="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/info"
            app:layout_constraintEnd_toEndOf="@id/image"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/image"
            app:layout_constraintTop_toTopOf="@id/info"
            app:layout_constraintVertical_bias="0.497"
            tools:visibility="gone">

            <TextView
                android:id="@+id/nutrition"
                style="@style/NutritionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@string/nutrition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="$200" />


            <TextView
                android:id="@+id/amountPer"
                style="@style/NutritionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@string/amountPerServing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nutrition"
                tools:text="$200" />


            <TextView
                android:id="@+id/kcalTitle"
                style="@style/NutritionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@string/kcal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amountPer" />


            <TextView
                android:id="@+id/kcal"
                style="@style/NutritionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_marginEnd="@dimen/end_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amountPer"
                tools:text="$200" />

            <TextView
                android:id="@+id/proteinTitle"
                style="@style/NutritionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@string/ptotein"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kcalTitle" />

            <TextView
                android:id="@+id/protein"
                style="@style/NutritionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_marginEnd="@dimen/end_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kcalTitle"
                tools:text="$200" />

            <TextView
                android:id="@+id/fatTitle"
                style="@style/NutritionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@string/fat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/proteinTitle" />


            <TextView
                android:id="@+id/fat"
                style="@style/NutritionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_marginEnd="@dimen/end_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/proteinTitle"
                tools:text="$200" />

            <TextView
                android:id="@+id/carbsTitle"
                style="@style/NutritionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_marginBottom="8dp"
                android:text="@string/carbs"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fatTitle" />

            <TextView
                android:id="@+id/carbs"
                style="@style/NutritionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_marginEnd="@dimen/end_margin"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fatTitle"
                tools:text="$200" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


